--- a/apps/critical-calc/index.html
+++ b/apps/critical-calc/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 custom_js: [tooltip, character/character-list, defense/defense-i18n]
-custom_data: [tooltip.js, calc/critical-data.js, characters/characters.js]
+custom_data: [tooltip.js, calc/critical-data.js, /data/character_info.js]
 permalink: /critical-calc/
 language: kr
 title : 크리티컬 계산기 - 페르소나5 더 팬텀 X 루페르넷
