--- a/apps/defense-calc/index.html
+++ b/apps/defense-calc/index.html
@@ -2,7 +2,7 @@
 layout: default
 custom_js: [tooltip, character/character-list, defense/defense-i18n]
 custom_data: [tooltip.js, calc/boss.js, calc/defense-data.js, wonder/weapons.js, wonder/skills.js,
-characters/characters.js]
+/data/character_info.js]
 permalink: /defense-calc/
 language: kr
 title : 방어력 감소 계산기 - 페르소나5 더 팬텀 X 루페르넷
