--- a/apps/gallery/index.html
+++ b/apps/gallery/index.html
@@ -12,7 +12,7 @@ en: /apps/gallery/?lang=en
 jp: /apps/gallery/?lang=jp
 custom_css: []
 custom_js: []
-custom_data: ["characters/characters.js"]
+custom_data: ["/data/character_info.js"]
 ---
 
 {% if page.alternate_urls %}
