--- a/apps/home/index.html
+++ b/apps/home/index.html
@@ -2,7 +2,7 @@
 layout: default
 custom_css: [tactic-posts]
 custom_js: [tactic-preview, /tactic/share]
-custom_data: [/characters/characters.js]
+custom_data: [/data/character_info.js]
 permalink: /
 redirect_from:
 - /kr/
