--- a/apps/pull-calc/index.html
+++ b/apps/pull-calc/index.html
@@ -2,7 +2,7 @@
 layout: default
 custom_css: []
 custom_js: [tooltip, character/character-list]
-custom_data: [characters/characters.js]
+custom_data: [/data/character_info.js]
 permalink: /pull-calc/
 language: kr
 title: 가챠 플래너 - 페르소나5 더 팬텀 X 루페르넷
