--- a/apps/schedule/index.html
+++ b/apps/schedule/index.html
@@ -2,7 +2,7 @@
 layout: default
 custom_css: []
 custom_js: [tooltip]
-custom_data: [characters/characters.js]
+custom_data: [/data/character_info.js]
 permalink: /schedule/
 redirect_from:
 - /en/schedule/
