--- a/apps/synergy/index.html
+++ b/apps/synergy/index.html
@@ -26,7 +26,7 @@ jp: /synergy/?lang=jp
     <link rel="stylesheet" href="{{ site.baseurl }}/apps/synergy/synergy.css?v={{ site.time | date: '%s' }}">
     <link rel="stylesheet" href="{{ site.baseurl }}/apps/synergy/soulmate.css?v={{ site.time | date: '%s' }}">
     <script src="{{ site.baseurl }}/assets/js/ad-injector.js?v={{ site.time | date: '%s' }}"></script>
-    <script src="{{ site.baseurl }}/data/kr/characters/characters.js?v={{ site.time | date: '%s' }}"></script>
+    <script src="{{ site.baseurl }}/data/character_info.js?v={{ site.time | date: '%s' }}"></script>
 
     <!-- i18n 서비스 -->
     <script src="{{ site.baseurl }}/i18n/service/i18n-service.js?v={{ site.time | date: '%s' }}"></script>
