--- a/apps/tactic-maker/index.html
+++ b/apps/tactic-maker/index.html
@@ -2,7 +2,7 @@
 layout: default
 custom_css: []
 custom_js: [tooltip, character/character-list]
-custom_data: [characters/characters.js, revelations/revelations.js, wonder/skills.js, wonder/weapons.js]
+custom_data: [/data/character_info.js, revelations/revelations.js, wonder/skills.js, wonder/weapons.js]
 permalink: /tactic-maker/
 language: kr
 title: 택틱 메이커 - 페르소나5 더 팬텀 X 루페르넷
