--- a/apps/tactic/tactic-upload.html
+++ b/apps/tactic/tactic-upload.html
@@ -2,7 +2,7 @@
 layout: default
 custom_css: [tactic, tactic-share]
 custom_js: [tooltip, tactic-preview]
-custom_data: [tooltip.js, characters/characters.js, revelations/revelations.js, tactic/pattern.js, wonder/weapons.js, wonder/skills.js]
+custom_data: [tooltip.js, /data/character_info.js, revelations/revelations.js, tactic/pattern.js, wonder/weapons.js, wonder/skills.js]
 permalink: /tactic/tactic-upload.html
 language: kr
 title: 택틱 업로드 - 페르소나5 더 팬텀 X 루페르넷
