--- a/apps/character/index.html
+++ b/apps/character/index.html
@@ -483,7 +483,7 @@ redirect_from:
 
         try {
             // 1) KR 스크립트 로드 후 전역에서 추출
-            await loadScriptOnce(`/data/kr/characters/characters.js?v=${APP_VERSION}`);
+            await loadScriptOnce(`/data/character_info.js?v=${APP_VERSION}`);
             const krCharacterData = JSON.parse(JSON.stringify(window.characterData || {}));
             const krCharacterList = JSON.parse(JSON.stringify(window.characterList || {}));
 
