--- a/apps/pull-tracker/global-stats.html
+++ b/apps/pull-tracker/global-stats.html
@@ -126,7 +126,7 @@ description: "P5X 계약 전체 통계 (캐릭터/한정/무기)"
   })();
 </script>
 
-<script src="{{ site.baseurl }}/data/kr/characters/characters.js?v={{ site.time | date: '%s' }}"></script>
+<script src="{{ site.baseurl }}/data/character_info.js?v={{ site.time | date: '%s' }}"></script>
 <script src="{{ site.baseurl }}/apps/pull-tracker/js/lostlist.js?v={{ site.time | date: '%s' }}"></script>
 <script src="{{ site.baseurl }}/apps/pull-tracker/js/global-stats.js?v={{ site.time | date: '%s' }}"></script>
 <script>
