--- a/apps/revelations/index.html
+++ b/apps/revelations/index.html
@@ -337,11 +337,11 @@ jp: /revelations/?lang=jp
     async function loadCharacterData() {
         return new Promise((resolve, reject) => {
             // 중복 로딩 방지
-            document.querySelectorAll('script[src*="/data/kr/characters/characters.js"]').forEach(s => s.remove());
+            document.querySelectorAll('script[src*="/data/character_info.js"]').forEach(s => s.remove());
             const s = document.createElement('script');
-            s.src = '/data/kr/characters/characters.js';
+            s.src = '/data/character_info.js';
             s.onload = () => resolve();
-            s.onerror = () => reject(new Error('Failed to load /data/kr/characters/characters.js'));
+            s.onerror = () => reject(new Error('Failed to load /data/character_info.js'));
             document.head.appendChild(s);
         });
     }
