--- a/apps/tactic/index.html
+++ b/apps/tactic/index.html
@@ -2,7 +2,7 @@
 layout: default
 custom_css: [tactic]
 custom_js: [tooltip, tactic/share, tactic/library-loader, tactic/import, tactic/export,  tactic/setwonder, tactic/setparty, tactic/partyimg, tactic/createAction, tactic/renderTurns, tactic/updateAuto, tactic/findPattern, tactic/capture]
-custom_data: [characters/characters.js, tooltip.js, tactic/pattern.js,  revelations/revelations.js, wonder/weapons.js, wonder/skills.js]
+custom_data: [/data/character_info.js, tooltip.js, tactic/pattern.js,  revelations/revelations.js, wonder/weapons.js, wonder/skills.js]
 permalink: /tactic/
 language: kr
 title : 택틱 메이커 - 페르소나5 더 팬텀 X 루페르넷
@@ -485,7 +485,7 @@ description: 페르소나5 더 팬텀 X 택틱 메이커
           const lang = getCurrentLanguage();
           let forceKR = false;
           try { forceKR = localStorage.getItem('forceKRList') === 'true'; } catch (_) {}
-          const kr = await fetchCharactersData(`/data/kr/characters/characters.js?v=${APP_VERSION}`);
+          const kr = await fetchCharactersData(`/data/character_info.js?v=${APP_VERSION}`);
           if (!kr) {
             __ensureCharacterDataLoadedPromise = null;
             return false;
