--- a/apps/tactic/tactics.html
+++ b/apps/tactic/tactics.html
@@ -2,7 +2,7 @@
 layout: default
 custom_css: [tactic, tactic-share]
 custom_js: [tooltip, tactic-preview]
-custom_data: [tooltip.js, characters/characters.js, revelations/revelations.js, tactic/pattern.js, wonder/weapons.js,
+custom_data: [tooltip.js, /data/character_info.js, revelations/revelations.js, tactic/pattern.js, wonder/weapons.js,
 wonder/skills.js]
 permalink: /tactic/tactics.html
 language: kr
