--- a/apps/persona/index.html
+++ b/apps/persona/index.html
@@ -91,7 +91,7 @@ jp: /persona/?lang=jp
                     <div class="search-count" style="font-size: 12px; color: #aaa;">
                         <span id="filteredCount" data-i18n="filteredCount"></span>
                     </div>
-                    <button id="filterOpenBtn" class="filter-open-btn" aria-label="Filter">
+                    <button id="filterOpenBtn" class="filter-open-btn" aria-label="필터" data-i18n-aria="common.filter">
                         <span data-i18n="common.filter"
                             style="margin-right: 6px; font-size: 11px; font-weight: 400; color: #aaa;">필터</span>
                         <svg xmlns="http://www.w3.org/2000/svg" width="12" height="12" viewBox="0 0 24 24"
